# platform

./: CMakeLists.txt
data/: index.html
src/: CMakeLists.txt  main.cpp  server.cpp  server.h  socket.cpp  socket.h  window.cpp  window.h
